# aionoscope-benchmarks

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DOCUMENTATION.md  README.md  benchmark_models_list.md  pyproject.toml
aionoscope_benchmarks/: constants.py  dashboard_smoke.py  dense_targets.py  manifold_config.py  manifold_eval.py  manifold_slices.py  manifold_viewer.py  manifold_viz.py  model_registry.py  offline_probe.py  probe_metrics.py  repo_checks.py  results.py  run_baseline.py  run_many.py  run_model.py  runtime_dataset.py  tune_encode_batch.py
configs/: dataset_aiono_basic_components_balanced.yaml  dataset_toyts_basic_components_balanced.yaml  models_foundational.yaml  probe.yaml
docs/: adapter-guide.md  architecture-map.md  benchmark-contract.md  coding-standards.md  dashboard-guide.md  index.md  maintenance.md  manifold-r2-pages.md  planning.md  results-schema.md
logs/: manifold_model_difficulties_20260603.md
plans/: 001_agents_docs_alignment.md  001_multi_component_interference_benchmark_plan.md  002_toto_4096_and_tabular_ts_audit.md  003_tabpfn_ts_tabicl_forecaster_embeddings.md
results/: AGENTS.md  _redirects  about-aionoscope.html  about-lenepa.html  about-manifolds-2.html  about-manifolds-3.html  about-manifolds-4.html  about-manifolds.html  baseline_calibration_by_length.csv  dashboard-v2.html  dashboard.html  manifolds.html
scripts/: build_manifold_calibration_viewer.py  diagnose_toto2_probe_lr.py  run_foundational_encode_tuning.py  run_foundational_sequential.py  run_lenepa_cauker2m_checkpoint_manifolds.py  run_manifold_calibration.py  (+2 more)
(+620 files in other folders)
